# elastic-ai.experiment-framework

./: .gitignore  README.md  creator-wrapper.nix  devenv.nix  devenv.yaml  draft_protocol.md  flake.nix  pyproject.toml  tach.toml
.github/workflows/: checks.yml
example-firmwares/env5/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakelists.txt
example-firmwares/env5/cmake/: eai_runtime_import.cmake  load_third_party_deps.cmake  unit_test_framework.cmake
example-firmwares/env5/experiments/: CMakeLists.txt  config.c  config.h  experiment.c
example-firmwares/env5/experiments/libs/: CMakeLists.txt
example-firmwares/env5/experiments/libs/experiment/: Fpga.h  I2cModule.h  I2cPico.c  I2cPico.h  Middleware.c  Middleware.h  PicoFpga.c  PicoFpga.h  PowerSensor.h  Spi.h  SpiPico.c  SpiPico.h  experiment.h  fpgaPowerSensor.c  fpgaPowerSensor.h
example-firmwares/env5/experiments/libs/experiment/remote_control_protocol/: CMakeLists.txt  remote_control_protocol.c  remote_control_protocol.h
example-firmwares/env5/experiments/tests/: CMakeLists.txt  test_remote_control_protocol.c
src/elasticai/experiment_framework/: cli.py  devices.py  message.py  message_builder.py  message_chunks_receiver.py  message_io.py  remote_control.py  remote_control_protocol.py  synthesis.py
src/elasticai/experiment_framework/remote_control/: __init__.py  devices.py  frame.py  function_calls.py  io_stream.py  message.py  message_builder.py  message_chunks_receiver.py  message_io.py  remote_control.py  remote_control_protocol.py
src/elasticai/experiment_framework/synthesis/: __init__.py  _connection.py  _connection_fabric.py  _connection_invoke.py  synthesis.py  verbosity.py  vivado_synthesis.py
tests/system/: detect_port_test.py
tests/unit/: frame_test.py  message_io_test.py  message_test.py  synth_config_load_test.py  test_message_builder.py
