[project]
name = "elasticai.experiment_framework"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Lukas Einhaus", email = "lukas.einhaus@uni-due.de" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fabric>=3.2.2",
    "invoke>=2.2.1",
    "pyserial>=3.4",
    "pyserial-asyncio-fast",
]


[project.scripts]
eaixp = "elasticai.experiment_framework.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elasticai"]
exclude = ["*_test.py", "test_*.py"]

[tool.pyrefly]
search-path = ["src"]
project-includes = ["src/**/*.py*", "tests/**/*.py*"]
project-excludes = [
    "**/__pycache__",
    "**/.devenv",
    "**/.direnv",
    "**/.mypy_cache",
    "**/.pytest_cache",
    "**/build",
    "**/*.pyc",
    "example-firmwares/build/**",
]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "hatch>=1.16.2",
    "hatch-vcs>=0.5.0",
    "mypy>=1.19.1",
    "pylsp-mypy>=0.7.0",
    "pylsp-rope>=0.1.17",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-lsp-server>=1.14.0",
    "tach>=0.33.0",
]
extra-dev = ["pyrefly>=0.57.1", "ty>=0.0.24"]


[tool.coverage.run]
omit = [
    "tests/*py",
    "src/elasticai/experiment_framework/*_test.py", # not testable
]
source = ["src/elasticai/experiment_framework"]
command_line = "-m pytest tests/unit"

[tool.uv.sources]
pyserial-asyncio-fast = { git = "https://github.com/home-assistant-libs/pyserial-asyncio-fast" }

[tool.pytest]
testpaths = ["tests/unit"]
